--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,17 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <style type="text/css">
+      body {
+        background-color: black;
+      }
+      .recharts-surface { 
+        margin-top: 5%;
+      }
+      .recharts-legend-item-text {
+        margin-top: 5%;
+      }
+      </style>
+      <div id="root"></div>
   </body>
 </html>
