--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,9 @@
       .recharts-legend-item-text {
         margin-top: 5%;
       }
+      /* .modal-body {
+        background-color: black;
+      } */
       </style>
       <div id="root"></div>
   </body>
